Avoid overflow  on mobile & Like

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,11 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+  position: relative;
+}
+
 :root {
 }
 
